Closed
Bug 1276119
Opened 9 years ago
Closed 9 years ago
Flash produces sound in muted tab
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(firefox47 unaffected, firefox48 unaffected, firefox49 fixed)
RESOLVED
FIXED
mozilla49
Tracking | Status | |
---|---|---|
firefox47 | --- | unaffected |
firefox48 | --- | unaffected |
firefox49 | --- | fixed |
People
(Reporter: arni2033, Assigned: alwu)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
>>> My Info: Win7_64, Nightly 49, 32bit, ID 20160517030211
STR:
1. Open data:3,<script>setTimeout("location='http:/dagobah.net/flash/lolicatgirls.swf'",5000)</script>
2. In less than 5 seconds press Ctrl+M to mute tab
3. Wait 10 seconds until the page with flash loads
AR: Sound
ER: No sound
This is regression from bug 1242874. Regression range:
> https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=09bb19edf4a807b487e3c7e42f07f9a298001c99&tochange=ea6a844dc6b9dd2094cc9852f44997bf6e7edb24
Updated•9 years ago
|
Component: Audio/Video: Playback → Plug-ins
Assignee | ||
Updated•9 years ago
|
Assignee: nobody → alwu
Assignee | ||
Comment 1•9 years ago
|
||
[Root cause]
Since we unmute the plug-in in [1] soon after the plug-in was muted.
[Solution]
Since we only support for muting now, the implementation of suspend is equal to muting. Therefore, if we have already muted the plugin,then we don't need to call WindowSuspendChanged() again.
[1] https://dxr.mozilla.org/mozilla-central/source/dom/plugins/base/nsNPAPIPlugin.cpp#2306
Assignee | ||
Comment 2•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/55748/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/55748/
Assignee | ||
Comment 3•9 years ago
|
||
Assignee | ||
Updated•9 years ago
|
Attachment #8757169 -
Flags: review?(amarchesini)
Updated•9 years ago
|
Attachment #8757169 -
Flags: review?(amarchesini) → review+
Comment 4•9 years ago
|
||
Comment on attachment 8757169 [details]
MozReview Request: Bug 1276119 - part1: don't call WindowSuspendChanged if the plugin is already muted.
https://reviewboard.mozilla.org/r/55748/#review52874
Assignee | ||
Comment 5•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/56252/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/56252/
Attachment #8757169 -
Attachment description: MozReview Request: Bug 1276119 - don't call WindowSuspendChanged if the plugin is already muted. → MozReview Request: Bug 1276119 - part1: don't call WindowSuspendChanged if the plugin is already muted.
Attachment #8757893 -
Flags: review?(amarchesini)
Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8757169 [details]
MozReview Request: Bug 1276119 - part1: don't call WindowSuspendChanged if the plugin is already muted.
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/55748/diff/1-2/
Updated•9 years ago
|
Attachment #8757893 -
Flags: review?(amarchesini) → review+
Comment 7•9 years ago
|
||
Comment on attachment 8757893 [details]
MozReview Request: Bug 1276119 - part2: add test.
https://reviewboard.mozilla.org/r/56252/#review52884
Assignee | ||
Comment 8•9 years ago
|
||
Comment 10•9 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/c27e49247fe2
https://hg.mozilla.org/mozilla-central/rev/ba07e25e6d1d
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Updated•9 years ago
|
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•