Bug 1276119 - part1: don't call WindowSuspendChanged if the plugin is already muted.

MozReview-Commit-ID: 8HlmEAqd1n